networking/gateway/resources/gateways/lan.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lan-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.1.12
  listeners:
    # https://cert-manager.io/docs/usage/gateway/#use-cases
    # For details on how to make these listeners for cert-manager
    - protocol: HTTPS
      name: home-lan-argocd
      hostname: argocd.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-homelab-local-tls
            namespace: argocd
    - protocol: HTTPS
      name: home-lan-garage
      hostname: "*.s3.drmarchent.com"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: garage-homelab-local-tls
            namespace: garage
    - protocol: HTTPS
      name: home-lan-grafana
      hostname: grafana.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-homelab-local-tls
            namespace: monitoring
    - protocol: HTTPS
      name: home-lan-harbor
      hostname: harbor.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: harbor-homelab-local-tls
            namespace: harbor
    - protocol: HTTPS
      name: home-lan-hello-world
      hostname: helloworld.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: hello-world-homelab-local-tls
            namespace: hello-world
    - protocol: HTTPS
      name: home-lan-longhorn
      hostname: longhorn.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-homelab-local-tls
            namespace: longhorn-system
    - protocol: HTTPS
      name: home-lan-endurain
      hostname: endurain.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: endurain-homelab-local-tls
            namespace: endurain
    - protocol: HTTPS
      name: home-lan-excalidraw
      hostname: excalidraw.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: excalidraw-homelab-local-tls
            namespace: excalidraw
    - protocol: HTTPS
      name: home-lan-auth
      hostname: auth.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: authelia-homelab-local-tls
            namespace: authelia
    - protocol: HTTPS
      name: home-lan-renovate
      hostname: renovate.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: renovate-homelab-local-tls
            namespace: renovate-operator
    - protocol: HTTPS
      name: home-lan-hubble
      hostname: hubble.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-homelab-local-tls
            namespace: kube-system
    - protocol: HTTPS
      name: home-lan-bytestash
      hostname: bytestash.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: bytestash-homelab-local-tls
            namespace: bytestash
    - protocol: HTTPS
      name: home-lan-searxng
      hostname: search.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: searxng-homelab-local-tls
            namespace: searxng
    - protocol: HTTPS
      name: home-lan-mlflow
      hostname: mlflow.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: mlflow-homelab-local-tls
            namespace: mlflow
    - protocol: HTTPS
      name: home-lan-llm
      hostname: llm.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-drmarchent-local-tls
            namespace: cloudflare
    - protocol: HTTPS
      name: home-lan-chat
      hostname: chat.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: chat-homelab-local-tls
            namespace: open-webui
    - protocol: HTTPS
      name: home-lan-memory
      hostname: memory.drmarchent.com
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: memory-service-homelab-local-tls
            namespace: memory-service
    - protocol: HTTP
      name: http-redirect
      port: 80
      allowedRoutes:
        namespaces:
          from: All
